--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             }
 
             .container {
-                display: contents;  /*remove unwanted space (avoid horizontal scrolling/overflow)*/           }
+                display: contents;  /*remove unwanted space (avoid horizontal scrolling/overflow)*/           
+            }
         }
         
         @media (min-width: 701px) {
@@ -61,7 +62,6 @@
             .main-item1 {
                 grid-area: main;
                 display: grid;
-                align-content: stretch;
                 grid-row-gap: 1rem;
                 grid-template-areas: 
                     "portrait-name"
