--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <header class="item1">
             <div class="container"> 
                 <div id="topHeaderRow">
-                    <p>Welcome to <a href="#">Art Store</a>, <a href="#">Login</a> or <a href="#"> Create new account</a>
+                    <p>Welcome to <a href="#">Art Store</a>, <a href="#">Login</a> or <a href="/assign2_2_r.html"> Create new account</a>
                     <nav>
                         <ul>
                             <li><i class="fas fa-user"></i><a href="#"> My Account</a></li>
