--- a/index.html
+++ b/index.html
@@ -242,38 +242,38 @@
                                         <legend>Profile</legend>
                                         <div class="fieldItem">
                                             <label for="firstName">First Name</label>
-                                            <input type="text" id="firstName" name="firstName" pattern="^[A-Za-z][A-Za-z\.\- ]+[A-Za-z]$">
+                                            <input type="text" id="firstName" name="firstName" pattern="^[A-Za-z][A-Za-z\.\- ]+[A-Za-z]$" required>
                                         </div>
                                         <div class="fieldItem">
                                             <label for="lastName">Last Name</label>
-                                            <input type="text" id="lastName" name="lastName" pattern="^[A-Za-z][A-Za-z\.\- ]+[A-Za-z]$">
+                                            <input type="text" id="lastName" name="lastName" pattern="^[A-Za-z][A-Za-z\.\- ]+[A-Za-z]$" required>
                                         </div>
                                         <div class="fieldItem">
                                             <label for="birthday">Birth Day</label>
-                                            <input type="date" id="birthday" name="birthday">
+                                            <input type="date" id="birthday" name="birthday" required>
                                         </div>
                                     </fieldset>
                                     <fieldset id="contact">
                                         <legend>Contact</legend>
                                         <div class="fieldItem">
                                             <label for="address">Address</label>
-                                            <input type="text" id="address" name="address">
+                                            <input type="text" id="address" name="address" required>
                                         </div>
                                         <div class="fieldItem">
                                             <label for="stateRegion">State/Region</label>
-                                            <input type="text" id="stateRegion" name="stateRegion">
+                                            <input type="text" id="stateRegion" name="stateRegion" required>
                                         </div>
                                         <div class="fieldItem">
                                             <label for="city">City</label>
-                                            <input type="text" id="city" name="city">
+                                            <input type="text" id="city" name="city" pattern="^[A-Za-z][A-Za-z]+[A-Za-z]$" required>
                                         </div>
                                         <div class="fieldItem">
                                             <label for="zip">Zip</label>
-                                            <input type="text" id="zip" name="zip" max="8" pattern="^\d[\d ]{3}\d$">
+                                            <input type="text" id="zip" name="zip" max="8" pattern="^\d[\d ]{3}\d$" required>
                                         </div>
                                         <div class="fieldItem">
                                             <label for="country">Country</label>
-                                            <select id="country" name="county">
+                                            <select id="country" name="county" required>
                                                 <option value="" disabled hidden selected>--</option>
                                                 <option value="county 1">Country 1</option>
                                                 <option value="county 2">Country 2</option>
@@ -284,7 +284,7 @@
                                         </div>
                                         <div class="fieldItem">
                                             <label for="mobile">Mobile</label>
-                                            <input type="tel" id="mobile" name="mobile" placeholder="NNN-NNN-NNNN" pattern="^\d{3}\-\d{3}\-\d{4}$">
+                                            <input type="tel" id="mobile" name="mobile" placeholder="NNN-NNN-NNNN" pattern="^\d{3}\-\d{3}\-\d{4}$" required>
                                         </div>
                                     </fieldset>
                                     <div id=termsField>
