--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                             <!-- Wrap the element that changes between pages (i.e. table - form) in a container
                                 for placement in the grid template. -->
                             <div id="insertedBox">
-                                <form method="get" action="http://courses.e-ce.uth.gr/ECE9124/process.php">
+                                <form method="post" action="http://courses.e-ce.uth.gr/ECE9124/process.php">
                                     <fieldset id="account">
                                         <legend>Account</legend>
                                         <div class="fieldItem">
